WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162064
Tighten region style map to use RenderElement instead of RenderObject
https://bugs.webkit.org/show_bug.cgi?id=162064
Summary
Tighten region style map to use RenderElement instead of RenderObject
Antti Koivisto
Reported
2016-09-16 10:18:44 PDT
This allow RenderObject cleanups.
Attachments
patch
(23.05 KB, patch)
2016-09-16 10:22 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-09-16 10:22:29 PDT
Created
attachment 289069
[details]
patch
WebKit Commit Bot
Comment 2
2016-09-16 14:41:37 PDT
Comment on
attachment 289069
[details]
patch Clearing flags on attachment: 289069 Committed
r206049
: <
http://trac.webkit.org/changeset/206049
>
WebKit Commit Bot
Comment 3
2016-09-16 14:41:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug