Source/WebCore/rendering/RenderElement.h
@@ -229,6 +229,9 @@ public:
 
     RespectImageOrientationEnum shouldRespectImageOrientation() const;
 
+    void removeFromRenderFlowThread();
+    void invalidateFlowThreadContainingBlockIncludingDescendants(RenderFlowThread* = nullptr);
+
 protected:
     enum BaseTypeFlag {
         RenderLayerModelObjectFlag  = 1 << 0,
@@ -283,6 +286,8 @@ protected:
     void paintFocusRing(PaintInfo&, const RenderStyle&, const Vector<LayoutRect>& focusRingRects);
     void paintOutline(PaintInfo&, const LayoutRect&);
     void updateOutlineAutoAncestor(bool hasOutlineAuto);
+
+    void removeFromRenderFlowThreadIncludingDescendants(bool shouldUpdateState);
 
 private:
     RenderElement(ContainerNode&, RenderStyle&&, BaseTypeFlags);
