Source/WebCore/rendering/RenderFlowThread.cpp
@@ -92,7 +92,7 @@ void RenderFlowThread::styleDidChange(StyleDifference diff, const RenderStyle* o
         invalidateRegions();
 }
 
-void RenderFlowThread::removeFlowChildInfo(RenderObject* child)
+void RenderFlowThread::removeFlowChildInfo(RenderElement* child)
 {
     if (is<RenderBlockFlow>(*child))
         removeLineRegionInfo(downcast<RenderBlockFlow>(child));
